workflows: disambiguate artifact names
Since multiple workflows can now be called from the same caller
workflow, these will all end up in the same UI, so we should make
sure the artifact names are not ambiguous.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/.github/workflows/sel4bench-hw.yml
+++ b/.github/workflows/sel4bench-hw.yml
@@ -60,7 +60,7 @@ jobs:
     - name: Upload images
       uses: actions/upload-artifact@v4
       with:
-        name: images-${{ matrix.march }}
+        name: images-sel4bench-${{ matrix.march }}
         path: '*-images.tar.gz'
 
   hw-run:
@@ -102,7 +102,7 @@ jobs:
       - name: Download image
         uses: actions/download-artifact@v4
         with:
-          name: images-${{ steps.plat.outputs.march }}
+          name: images-sel4bench-${{ steps.plat.outputs.march }}
       - name: Run
         uses: seL4/ci-actions/sel4bench-hw@master
         with:
