thylint: accept PR number inputs
GitHub turns this into INPUT_PR_NUM, which is consumed by
`scripts/checkout.sh`.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/thylint/action.yml
+++ b/thylint/action.yml
@@ -10,6 +10,9 @@ inputs:
   token:
     description: 'GitHub token for read access to repository'
     required: false
+  pr_num:
+    description: 'Explicit pull request number to check out, e.g. for pull_request_target'
+    required: false
   disable:
     description: 'Comma-separated list (no spaces) of warning classes to disable (default: none)'
     required: false
