github: repository_dispatch trigger on deps-update
Allow remote repositories to trigger container deployment on this repo
with the `deps-update` payload. The intention is for this to be used
from the seL4-CAmkES-L4v-Dockerfiles repo when the base docker images
are updated.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/.github/workflows/deploy-camkes-unit.yml
+++ b/.github/workflows/deploy-camkes-unit.yml
@@ -14,6 +14,9 @@ on:
     - 'scripts/**'
     - 'camkes-unit/**'
   workflow_dispatch:
+  # allow explict trigger from other repos when dependencies have changed
+  repository_dispatch:
+    types: [deps-update]
 
 jobs:
   docker:
