--- a/.github/workflows/deploy-cparser-run.yml
+++ b/.github/workflows/deploy-cparser-run.yml
@@ -9,7 +9,7 @@ name: Deploy CParser Run
 on:
   # the real build trigger is in deploy-cparser-builder
   repository_dispatch:
-    types: [cparser-build]
+    types: [cparser-build, deps-update]
   workflow_dispatch:
 
 jobs:
