platforms: enable zynqmp 32-bit tests
Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -235,9 +235,9 @@ platforms:
 
   ZYNQMP:
     arch: arm
-    modes: [64]
+    modes: [32, 64]
     smp: [64]
-    aarch_hyp: [64]
+    aarch_hyp: [32, 64]
     platform: zynqmp
     req: [zcu102_2]
     march: armv8a
@@ -248,9 +248,9 @@ platforms:
 
   ZYNQMP106:
     arch: arm
-    modes: [64]
+    modes: [32, 64]
     smp: [64]
-    aarch_hyp: [64]
+    aarch_hyp: [32, 64]
     platform: zynqmp
     req: [zcu106]
     march: armv8a
