platforms: disable zynqmp hyp 32
The zynqmp hyp + 32 combination needs more setup, it currently does not
boot.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -237,7 +237,7 @@ platforms:
     arch: arm
     modes: [32, 64]
     smp: [64]
-    aarch_hyp: [32, 64]
+    aarch_hyp: [64]
     platform: zynqmp
     req: [zcu102_2]
     march: armv8a
@@ -250,7 +250,7 @@ platforms:
     arch: arm
     modes: [32, 64]
     smp: [64]
-    aarch_hyp: [32, 64]
+    aarch_hyp: [64]
     platform: zynqmp
     req: [zcu106]
     march: armv8a
