platforms: add imx93
Currently there are no boards yet in CI for this platform. (To be
changed in the next few months).

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -157,6 +157,15 @@ platforms:
     req: [tqma]
     march: armv8a
 
+  IMX93:
+    arch: arm
+    modes: [64]
+    smp: [64]
+    aarch_hyp: [64]
+    platform: imx93
+    march: armv8a
+    no_hw_test: true
+
   OMAP3:
     arch: arm
     modes: [32]
