github: always trigger actions when label present
Previously we only triggered tests such as hw-test when the
corresponding label was added. Since we now cancel older runs of the
same workflow, this no longer works, because even a run with negative
trigger condition will cancel the older workflow.

Therefore we now always trigger a new run when the test is enabled via
label.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/.github/workflows/sel4bench-hw.yml
+++ b/.github/workflows/sel4bench-hw.yml
@@ -21,12 +21,14 @@ jobs:
   code:
     name: Freeze Code
     runs-on: ubuntu-latest
+
+# Since we cancel older runs of this workflow for the current PR, we want to
+# restart tests ("contains" clause), even if the event is for adding a different
+# label.
     if: ${{ github.event_name == 'pull_request_target' &&
             (
-               github.event.action != 'labeled' &&
-                contains(github.event.pull_request.labels.*.name, 'hw-bench') ||
-               github.event.action == 'labeled' &&
-                github.event.label.name == 'hw-bench'
+              contains(github.event.pull_request.labels.*.name, 'hw-bench') ||
+              github.event.label.name == 'hw-bench'
             ) }}
     outputs:
       xml: ${{ steps.repo.outputs.xml }}
