--- a/.github/workflows/sel4test-hw.yml
+++ b/.github/workflows/sel4test-hw.yml
@@ -24,14 +24,15 @@ jobs:
   code:
     name: Freeze Code
     runs-on: ubuntu-latest
+# Since we cancel older runs of this workflow for the current PR, we want to
+# restart tests ("contains" clause), even if the event is for adding a different
+# label.
     if: ${{ github.event_name == 'pull_request_target' &&
             (
-              github.event.action != 'labeled' &&
-              (contains(github.event.pull_request.labels.*.name, 'hw-build') ||
-               contains(github.event.pull_request.labels.*.name, 'hw-test')) ||
-              github.event.action == 'labeled' &&
-              (github.event.label.name == 'hw-build' ||
-               github.event.label.name == 'hw-test')
+              contains(github.event.pull_request.labels.*.name, 'hw-build') ||
+              contains(github.event.pull_request.labels.*.name, 'hw-test') ||
+              github.event.label.name == 'hw-build' ||
+              github.event.label.name == 'hw-test'
             ) }}
     outputs:
       xml: ${{ steps.repo.outputs.xml }}
@@ -91,13 +92,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: the_matrix
     if: ${{ github.repository_owner == 'seL4' &&
-            (github.event_name == 'push' ||
-             github.event_name == 'pull_request_target' &&
-               github.event.action != 'labeled' &&
-               contains(github.event.pull_request.labels.*.name, 'hw-test') ||
-             github.event_name == 'pull_request_target' &&
-               github.event.action == 'labeled' &&
-               github.event.label.name == 'hw-test') }}
+            (github.event_name == 'pull_request_target' &&
+               (contains(github.event.pull_request.labels.*.name, 'hw-test') ||
+                github.event.label.name == 'hw-test')) }}
     concurrency:
       group: ${{ github.workflow }}-sel4test-hw-run-pr-${{ github.event.number }}-${{ strategy.job-index }}
       cancel-in-progress: true
