--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -293,6 +293,7 @@ platforms:
   RPI4:
     arch: arm
     modes: [64]
+    smp: [64]
     platform: rpi4
     req: [pi4B]
     image_platform: bcm2711
