platforms.yml: add HiFive P550
Signed-off-by: Ivan-Velickovic <i.velickovic@unsw.edu.au>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -90,6 +90,14 @@ platforms:
     march: rv64imac
     no_hw_test: true
 
+  HIFIVE_P550:
+    arch: riscv
+    modes: [64]
+    smp: [64]
+    platform: hifive-p550
+    march: rv64imacfd
+    req: [p550a]
+
   SABRE:
     arch: arm
     modes: [32]
