platforms.yml: add builds for Ariane and Cheshire
Signed-off-by: Ivan-Velickovic <i.velickovic@unsw.edu.au>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -23,6 +23,20 @@ architectures: [x86, arm, riscv]
 #     no_hw_build: optional; (null = false); no hw build for this platform (implies no_hw_test)
 
 platforms:
+  ARIANE:
+    arch: riscv
+    modes: [64]
+    platform: ariane
+    march: rv64imafdc
+    no_hw_test: true
+
+  CHESHIRE:
+    arch: riscv
+    modes: [64]
+    platform: cheshire
+    march: rv64imafdc
+    no_hw_test: true
+
   SPIKE32:
     arch: riscv
     modes: [32]
