--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -27,14 +27,14 @@ platforms:
     arch: riscv
     modes: [64]
     platform: ariane
-    march: rv64imafdc
+    march: rv64imac
     no_hw_test: true
 
   CHESHIRE:
     arch: riscv
     modes: [64]
     platform: cheshire
-    march: rv64imafdc
+    march: rv64imac
     no_hw_test: true
 
   SPIKE32:
