link-check: update to lychee instead of liche
liche is no longer maintained. Use lychee instead, with the same
interface. Additionally provide facilities for a .linkcheck-ignore.yml
file for ignoring specific files or URLs.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/link-check/Dockerfile
+++ b/link-check/Dockerfile
@@ -4,9 +4,12 @@
 
 # The context for this Dockerfile is the repo root
 
-FROM sel4/liche:f57a5d1c5
+FROM lycheeverse/lychee:sha-85263df
 
-RUN apk add git
+RUN apt-get update
+RUN apt-get install -y git curl
+RUN curl -OL https://github.com/mikefarah/yq/releases/download/v4.45.1/yq_linux_386.tar.gz
+RUN tar -xvf yq_linux_386.tar.gz ./yq_linux_386 && mv yq_linux_386 /usr/bin/yq && rm yq_linux_386.tar.gz
 COPY scripts/checkout.sh link-check/steps.sh /usr/bin/
 
 ENTRYPOINT steps.sh
