--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -30,6 +30,13 @@ platforms:
     march: rv64imac
     no_hw_test: true
 
+  CHESHIRE:
+    arch: riscv
+    modes: [64]
+    platform: cheshire
+    march: rv64imac
+    no_hw_test: true
+
   SPIKE32:
     arch: riscv
     modes: [32]
