--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -42,7 +42,7 @@ jobs:
 
   style:
     name: Style
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
     - uses: seL4/ci-actions/style@master
       with:
