sel4bench-web: generate json instead of html
Since the site is running on Jekyll it makes more sense to generate the
page there directly and just provide the data as json input.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/sel4bench/builds.yml
+++ b/sel4bench/builds.yml
@@ -60,7 +60,7 @@ boards:
         compiler: gcc GNU 10.2.1
     Skylake:
         soc: i7-6700
-        note: (without meltdown mitigation)
+        note: without meltdown mitigation
         clock: 3.4 GHz
         compiler: gcc GNU 10.2.1
     Jetson:
