link-check: pass token through to lychee
To reduce rate limiting on GitHub links, pass the optional GitHub token
argument through to the link checker.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/link-check/action.yml
+++ b/link-check/action.yml
@@ -27,7 +27,7 @@ inputs:
     description: 'Maximum number of concurrent requests'
     required: false
   token:
-    description: 'GitHub token for read access to repository'
+    description: 'GitHub token for read access to repository and rate limit'
     required: false
   verbose:
     description: 'Print more information if set (default unset)'
