--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -172,6 +172,10 @@ platforms:
     platform: imx93
     march: armv8a
     req: imx93a
+    settings:
+      # override the default of 4 for sel4test; ignored in non-SMP builds
+      # if the platform is enabled for other apps this may need manual override
+      NUM_NODES=2
 
   OMAP3:
     arch: arm
