platforms temporarily disable build for CHESHIRE
Until sel4test builds properly.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -36,6 +36,7 @@ platforms:
     platform: cheshire
     march: rv64imac
     no_hw_test: true
+    no_hw_build: true
 
   SPIKE32:
     arch: riscv
