pin junitparser to v3; print junit exceptions
junitparser has released v4, with API breaking changes that result in an
exception. Pin to version 3 to keep things working, and print any
junitparser exceptions to make debugging this easier in the future.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/camkes-test/Dockerfile
+++ b/camkes-test/Dockerfile
@@ -16,7 +16,7 @@ RUN apt-get update \
     && apt-get clean autoclean \
     && apt-get autoremove --yes \
     && rm -rf /var/lib/{apt,dpkg,cache,log}/
-RUN pip3 install junitparser PyGithub
+RUN pip3 install "junitparser==3.*" PyGithub
 
 ARG ACTION
 ARG SCRIPTS
