Revert "platforms.yml: re-enable MCS on imx8mq* platforms"
This reverts commit 7bab260356b4ccd4f1e885d03fa37c3c15e38ed3.

Please see https://github.com/seL4/seL4/pull/1533#issuecomment-3478759026
for why. (SCHED0011 failures)

Running test SCHED0011 (Test scheduler accuracy)
    <error>Check diff(104175000) <= period_ns + 2 * (1000UL * 1000UL)(102000000)
    <error>Check diff(104174000) <= period_ns + 2 * (1000UL * 1000UL)(102000000)
    <error>Check diff(104173000) <= period_ns + 2 * (1000UL * 1000UL)(102000000)
    <error>Check diff(104173000) <= period_ns + 2 * (1000UL * 1000UL)(102000000)
    <error>Check diff(104173000) <= period_ns + 2 * (1000UL * 1000UL)(102000000)
    <error>Check diff(104173000) <= period_ns + 2 * (1000UL * 1000UL)(102000000)
    <error>Check diff(104173000) <= period_ns + 2 * (1000UL * 1000UL)(102000000)
    <error>Check diff(104174000) <= period_ns + 2 * (1000UL * 1000UL)(102000000)
    <error>Check diff(104173000) <= period_ns + 2 * (1000UL * 1000UL)(102000000)
    <error>Check diff(104173000) <= period_ns + 2 * (1000UL * 1000UL)(102000000)
Test SCHED0011 failed

Signed-off-by: Julia Vassiliki <julia.vassiliki@unsw.edu.au>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -392,6 +392,9 @@ platforms:
 # platforms where MCS is wholly unsupported
 # (for platforms with partial support see sel4test-hw/build.py and comments below)
 mcs_unsupported_platforms:
+  # these fail SCHED0011 tests; see https://github.com/seL4/seL4/pull/1533#issuecomment-3478759026
+  - IMX8MQ_EVK
+  - MAAXBOARD
   # unsupported for specific configs: ODROID_X4, TX2
   # unsupported for multicore: SABRE, IMX8MM_EVK
   # see also https://github.com/seL4/ci-actions/blob/master/sel4test-hw/build.py
