preprocess: remove currently unused L4V_PLAT input
The only current client of this workflow is the seL4 repo, and it only
uses L4V_ARCH and L4V_FEATURES. L4V_PLAT is unused.

Since we now have too many variations of L4V_PLAT to run them all
concurrently, remove the input in preparation of iterating over L4V_PLAT
internally instead.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/preprocess/Makefile
+++ b/preprocess/Makefile
@@ -14,5 +14,5 @@ push: build
 
 test: build
 	docker run -ti --entrypoint bash -e GITHUB_REPOSITORY -e GITHUB_REF \
-	  -e INPUT_L4V_ARCH -e INPUT_L4V_FEATURES -e INPUT_L4V_PLAT \
+	  -e INPUT_L4V_ARCH -e INPUT_L4V_FEATURES \
 		-e GITHUB_WORKSPACE -e GITHUB_BASE_REF -e GITHUB_ACTIONS $(IMG)
