Add missing smp and aarch_hyp settings
Signed-off-by: Jakub Duchniewicz <j.duchniewicz@unsw.edu.au>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -118,6 +118,8 @@ platforms:
   ROCK3B:
     arch: arm
     modes: [64]
+    smp: [64]
+    aarch_hyp: [64]
     platform: rock3b
     req: [rock3b]
     march: armv8a
