Fix platform's name
Signed-off-by: Jakub Duchniewicz <j.duchniewicz@unsw.edu.au>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -120,8 +120,8 @@ platforms:
     modes: [64]
     smp: [64]
     aarch_hyp: [64]
-    platform: rock3b
-    req: [rock3b]
+    platform: rk3568
+    req: [rk3568]
     march: armv8a
     no_hw_test: true
 
